# dgx_spark_summary_from_human_feedback

./: .gitignore  Dockerfile  README.md  pyproject.toml  run_grpo.sh
dgx_spark_summary_from_human_feedback/: __init__.py  dpo.py  generation.py  get_comparison_data_stats.py  grpo.py  load_local_reward_model_and_push_to_hf.py  process_comparison_data.py  process_dataset.py  process_sft_dataset.py  push_to_hf.py  reward.py  reward_normalization.py  sft.py  summary_from_human_feedback.py  test_process_dataset.py
