[project]
name = "dgx-spark-summary-from-human-feedback"
version = "0.1.0"
description = "Reproduce Learning to summarize from human feedback in DGX Spark"
authors = [
    {name = "Liyuan Liu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.0.0",
    "pytest>=7.0.0",
]


[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
